# LMNinja

./: .gitignore  README.md  go.mod  go.sum  lmninja_setup.iss  main.go  package-lock.json  wails.json
.github/workflows/: build.yml
_dummy_mizugo/: go.mod
_dummy_uax/: go.mod
app/: app.go
cmd/lmninja/: main.go
frontend/: globals.css  index.html  layout.tsx  package-lock.json  package.json  package.json.md5  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/attacks/: page.tsx
frontend/components/: app-shell.tsx  attack-library.tsx  connectors.tsx  dashboard.tsx  developer-hub.tsx  lmninja-interface.tsx  red-team-chat.tsx  settings.tsx  sidebar.tsx
frontend/connectors/: page.tsx
frontend/developer/: page.tsx
frontend/lib/: state.ts
frontend/settings/: page.tsx
frontend/src/: App.tsx  App.vue  AppContent.vue  main.js  main.tsx  style.css  wails.d.ts
frontend/src/components/: AttackLibrary.tsx  Connectors.tsx  Dashboard.tsx  DeveloperHub.tsx  RedTeamChat.tsx  Settings.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/src/lib/: state.ts
internal/attacks/: loader.go
internal/config/: config.go
internal/engine/: engine.go
internal/llm/: anthropic.go  factory.go  gemini.go  llm.go  local_client.go  openai.go
internal/security/: credentials.go
internal/sidecar/: sidecar.go
internal/storage/: database.go
notebooks/: evaluate-compliance.ipynb
python-engine/: main.py  pyproject.toml  requirements.txt
python-engine/deberta-compliance-classifier-final/: config.json
(+42 files in other folders)
