[tool.poetry]
name = "lmninja-engine"
version = "0.1.0"
description = "AI engine for LMNinja"
authors = ["Your Name <you@example.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
llama-cpp-python = "^0.2.79"
ollama = "^0.2.1"


[build-system]
requires = ["poetry-core" ]
build-backend = "poetry.core.masonry.api"